--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -58,8 +58,7 @@ jobs:
           retry_on: error
           command: |
             chmod +x ./validator
-            # ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2
-            cp packages.json $OUTPUT_FILE
+            ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -93,8 +92,7 @@ jobs:
           retry_on: error
           command: |
             chmod +x ./validator
-            # ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2
-            cp packages.json $OUTPUT_FILE
+            ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2
             ./validator merge-lists out_*.json -o redirect-checked.json
             rm out_*.json
 
