--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -8,7 +8,7 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   SPI_API_TOKEN: ${{ secrets.SPI_API_TOKEN }}
-  NUMBER_OF_CHUNKS: "12"
+  CONCURRENCY: "10"
 
 jobs:
 
@@ -19,7 +19,8 @@ jobs:
     steps:
       - name: Build validator
         run: |
-          git clone https://github.com/SwiftPackageIndex/PackageList-Validator.git --depth 1
+          git clone https://github.com/SwiftPackageIndex/PackageList-Validator.git --depth 1 \
+            --branch concurrent-redirect-checks
           cd PackageList-Validator
           swift build
           cp $(swift build --show-bin-path)/validator $GITHUB_WORKSPACE/
@@ -56,7 +57,8 @@ jobs:
           retry_on: error
           command: |
             chmod +x ./validator
-            ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2
+            ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2 \
+              --concurrency $CONCURRENCY
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -90,7 +92,8 @@ jobs:
           retry_on: error
           command: |
             chmod +x ./validator
-            ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2
+            ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2 \
+              --concurrency $CONCURRENCY
             ./validator merge-lists out_*.json -o redirect-checked.json
             rm out_*.json
 
