--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -8,7 +8,6 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   SPI_API_TOKEN: ${{ secrets.SPI_API_TOKEN }}
-  CONCURRENCY: "10"
 
 jobs:
 
@@ -32,11 +31,9 @@ jobs:
             validator
 
 
-  check_redirects_0:
-    needs: build_validator
+  check_redirects:
     env:
-      CHUNK: "0"
-      OUTPUT_FILE: out_0.json
+      CONCURRENCY: "10"
     runs-on: ubuntu-latest
     container:
       image: swift:5.9-jammy
@@ -57,45 +54,7 @@ jobs:
           retry_on: error
           command: |
             chmod +x ./validator
-            ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2 \
-              --concurrency $CONCURRENCY
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-
-
-  check_redirects_1:
-    needs: check_redirects_0
-    env:
-      CHUNK: "1"
-      OUTPUT_FILE: out_1.json
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check redirect
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2 \
-              --concurrency $CONCURRENCY
-            ./validator merge-lists out_*.json -o redirect-checked.json
-            rm out_*.json
+            ./validator check-redirects -i packages.json -o $redirect-checked.json --concurrency $CONCURRENCY
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -105,7 +64,7 @@ jobs:
 
 
   check_dependencies:
-    needs: check_redirects_1
+    needs: check_redirects
     runs-on: ubuntu-latest
     container:
       image: swift:5.9-jammy
@@ -133,7 +92,7 @@ jobs:
                 --limit 20
             ./validator apply-deny-list -p packages.json -d denylist.json
             # Stop artifacts from appearing in the PR
-            rm -f out_*.json redirect-checked.json validator
+            rm -f redirect-checked.json validator
       - name: Create pull request
         id: cpr
         uses: peter-evans/create-pull-request@v5
