--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -55,6 +55,7 @@ jobs:
           command: |
             chmod +x ./validator
             ./validator check-redirects -i packages.json -o redirect-checked.json --concurrency $CONCURRENCY
+            diff packages.json redirect-checked.json
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
